[project]
name = "jax-turtorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jax[cuda]>=0.8.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "tqdm>=4.67.1",
]
